WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288912
[scroll-animations] `entry` and `exit` timeline ranges should be expressed in terms of other ranges
https://bugs.webkit.org/show_bug.cgi?id=288912
Summary
[scroll-animations] `entry` and `exit` timeline ranges should be expressed in...
Antoine Quint
Reported
2025-03-01 02:57:45 PST
The `exit` and `entry` timeline ranges are expressed in the spec in terms of values of the `contain` and `cover` ranges. Our current implementation deals with this with handling those values in shared switch cases, but it does not yield the expected behavior since depending on the subject size, the start and end values can be switched.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2025-03-01 03:00:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41712
EWS
Comment 2
2025-03-01 08:33:27 PST
Committed
291438@main
(e4cccf6e149c): <
https://commits.webkit.org/291438@main
> Reviewed commits have been landed. Closing PR #41712 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-01 08:34:12 PST
<
rdar://problem/145924452
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug