[scroll-animations] `entry` and `exit` timeline ranges should be expressed in terms of other ranges https://bugs.webkit.org/show_bug.cgi?id=288912

Reviewed by Tim Nguyen.

The `exit` and `entry` timeline ranges are expressed in the spec in terms of the `contain` and `cover`
ranges. Our current implementation deals with this by handling those values in shared `switch` cases,
but it does not yield the expected behavior since depending on the subject size, the start and end
values can be switched.

We now call back into `intervalForTimelineRangeName()` for `exit` and `entry` to obtain the right
values, accounting for that possible switch.

This progresses two WPT tests.

* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/view-timelines/sticky/view-timeline-sticky-offscreen-6-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/view-timelines/view-timeline-range-large-subject-expected.txt:
* Source/WebCore/animation/ViewTimeline.cpp:
(WebCore::ViewTimeline::intervalForTimelineRangeName const):

Canonical link: https://commits.webkit.org/291438@main